minor change: change route api companies
